--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/uuid": "^9.0.8",
     "framer-motion": "^6.5.1",
     "jwt-decode": "^4.0.0",
+    "mongoose": "^8.4.0",
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
